# leptos_lucide

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: lib.rs  tests.rs
src/icons/: .rs
